# gmqcc

./: .gitignore  CMakeLists.txt  README.md
gmqcc/: CMakeLists.txt  main.cpp
gmqcclib/: CMakeLists.txt  ast.cpp  fold.cpp  ftepp.cpp  intrin.cpp  ir.cpp  lexer.cpp  opts.cpp  parser.cpp
include/: gmqcc.h
qcvm/: CMakeLists.txt
testsuite/: CMakeLists.txt
